# FastAPI-project

./: .env  README.md  converter.py  main.py  pyproject.toml  routers.py  schemas.py
Collection-Insomnia/: Insomnia_2024-02-03.json
