[tool.poetry]
name = "projetopython"
version = "0.1.0"
description = ""
authors = ["alexandre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
httpx = "^0.26.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
